--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,5 +34,6 @@ dependencies {
 
     //Firebase
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
+    implementation 'com.facebook.android:facebook-android-sdk:[4,5)' // Facebook
 
 }
