--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,5 +39,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore:21.5.0'
     //Auth
     implementation 'com.google.firebase:firebase-auth:19.3.2'
+    //Storage
+    implementation 'com.google.firebase:firebase-storage:19.1.1'
+    implementation 'com.firebaseui:firebase-ui-storage:6.2.0'
 
 }
