--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
-    // Material Design
+
+    // Material design
     implementation 'com.google.android.material:material:1.1.0'
     //Firebase
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
@@ -43,6 +44,8 @@ dependencies {
     //Storage
     implementation 'com.google.firebase:firebase-storage:19.1.1'
     implementation 'com.firebaseui:firebase-ui-storage:6.2.0'
-    implementation 'com.facebook.android:facebook-android-sdk:[4,5)' // Facebook
+    // Facebook
+    implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
+
 
 }
