mostrar el recycle view con las imagenes , falta hacer el boton para q agrege comentarios

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="com.example.appsgrupallab4">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -13,7 +15,13 @@
         android:theme="@style/AppTheme">
         <activity android:name=".DetallesActivity"></activity>
 
-        <activity android:name=".PaginaPrincipal"></activity>
+        <activity android:name=".PaginaPrincipal">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+        </activity>
 
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
@@ -38,10 +46,7 @@
         <activity android:name=".AgregarComentario"></activity>
         <activity android:name=".SubirFoto"></activity>
         <activity android:name=".LoginActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>-
+
         </activity>
     </application>
 
