--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,14 +13,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".DetallesActivity"></activity>
-
+        <activity android:name=".Masdetalles"></activity>
+        <activity android:name=".DetallesActivity" />
         <activity android:name=".PaginaPrincipal">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
 
         <meta-data
@@ -34,7 +34,8 @@
         <activity
             android:name="com.facebook.CustomTabActivity"
             android:exported="true">
-            <intent-filter><action android:name="android.intent.action.VIEW" />
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
 
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
@@ -42,12 +43,10 @@
                 <data android:scheme="@string/fb_login_protocol_scheme" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"></activity>
-        <activity android:name=".AgregarComentario"></activity>
-        <activity android:name=".SubirFoto"></activity>
-        <activity android:name=".LoginActivity">
-
-        </activity>
+        <activity android:name=".MainActivity" />
+        <activity android:name=".AgregarComentario" />
+        <activity android:name=".SubirFoto" />
+        <activity android:name=".LoginActivity"></activity>
     </application>
 
 </manifest>
