--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,6 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -16,16 +15,10 @@
         <activity android:name=".Masdetalles"></activity>
         <activity android:name=".DetallesActivity" />
         <activity android:name=".PaginaPrincipal">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
 
-        <meta-data
-            android:name="com.facebook.sdk.ApplicationId"
-            android:value="@string/facebook_app_id" />
+
 
         <activity
             android:name="com.facebook.FacebookActivity"
@@ -45,8 +38,19 @@
         </activity>
         <activity android:name=".MainActivity" />
         <activity android:name=".AgregarComentario" />
-        <activity android:name=".SubirFoto" />
-        <activity android:name=".LoginActivity"></activity>
+        <activity android:name=".SubirFoto" >
+
+        </activity>
+        <activity android:name=".LoginActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id" />  
     </application>
 
 </manifest>
